--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,6 +805,10 @@ label {
     margin-top: 7px;
     margin-bottom: 7px;
 }
+.hoi{
+    height: 1.5vw;
+    padding: 0px;
+}
 
 .kleinstreepjereview {
     height: 0.1vw;
